finally doing this

--- a/contact.html
+++ b/contact.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/navigation.css">
 	<title>Contact</title>
 </head>
 	<h1>Mussolini's Pizza</h1>
 
 		<body>
-			<nav>
+			<nav id="navbar">
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Gallery</a></li>
-					<li><a href="#">Menu -- JS Product Cards</a></li>
+					<li><a href="home.html">Home</a></li>
+					<li><a href="gallery.html">Menu -- JS Product Cards</a></li>
 					<li><a href="#">Info/About</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				<ul>
 			</nav>
 
