--- a/gallery.html
+++ b/gallery.html
@@ -3,11 +3,19 @@
 <head>
 	<title>Gallery</title>
 	<link rel=stylesheet type="text/css" href="css/gallery.css">
+	<link rel=stylesheet type="text/css" href="css/navigation.css">
 </head>
 <body>
 	<header>
 	<h1>Gallery</h1>
 	</header>
+		<nav id="navbar">
+			<li><a href="home.html">Home</a></li>
+			<li><a href="gallery.html">Menu -- JS Product Cards</a></li>
+			<li><a href="#">Info/About</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</nav>
+		<ul>
 	<div class="images">
 		<img src="img/basil.jpg" width="200px" height="170px">
 		<img src="img/bbq.jpg" width="200px" height="170px">
