--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Mussolini's Pizza</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/navigation.css">
 </head>
 <body>
 	<h1>Mussolini's Pizza</h1>
