fixed the conflicts

--- a/gallery.html
+++ b/gallery.html
@@ -33,18 +33,18 @@
     </div>
     <h1 class="hide">Menu Items</h1>
 	</header>
-	<h1 class="top">Menu Items</h1>
+	<h1 id="top"> Menu Items</h1>
 	<div class="images">
 	   <div class="basil">
 	   <h2>Basil</h2>
 		<img src="img/basil.jpg" width="200px" height="170px">
 		<li><input type="text" value="Qty"></li>
-		<li><select name="Size"></li>
+		<li><select name="Size">
 			<option value="Large">Small</option>
 			<option value="Large">Medium</option>
 			<option value="Large">Large</option>
 			<option value="Large">XLarge</option>
-		</select>
+		</select></li>
 		<li><input type="submit"></li>
 		<h2>Toppings</h2>
 		<p>Pepperoni, Mushrooms, Onions, Sausage, Bacon, Extra cheese, Black olives, Green peppers.</p>
