modified contact page and css files

--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<title>Contact</title>
+	<link rel="stylesheet" type="text/css" href="navigation.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 	<h1>Mussolini's Pizza</h1>
 
 		<body>
-			<nav>
+			<nav id="navbar">
 				<ul>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">Gallery</a></li>
@@ -50,5 +52,7 @@
 
 		<img src="images/benito-likes-pizza.jpeg" alt="beinto likes pizza">
 		<footer>&copy; 2017, Mussolini's Pizza LLC</footer>
+
 		</body>
+
 </html>
